gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: todo-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo
spec:
  hosts:
  - "*"
  gateways:
  - todo-gateway
  http:
  - match:
    - uri:
        prefix: /todo
    route:
    - destination:
        host: backend
        port:
          number: 3000
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        port:
          number: 3000
