ingress.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  type: ExternalName
  externalName: frontend.default.svc.cluster.local
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
